@@ -1,3 +1,9 @@
+2002-06-19  Jeff Hobbs  <jeffh@ActiveState.com>
+
+	* tests/panedwindow.test:
+	* generic/tkPanedWindow.c: ensure that sash index is lower bounds
+	checked. [Bug #548727]
+
 2002-06-19  Mo DeJong  <mdejong@users.sourceforge.net>
 
 	* generic/tkClipboard.c (TkClipCleanup): Add code
